--- a/impressum.html
+++ b/impressum.html
@@ -4,41 +4,35 @@
   <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Impressum – Geomotional</title>
   <style>
-    body{font:16px/1.6 Inter,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;background:#0f172a;color:#e5e7eb;margin:0}
-    main{max-width:900px;margin:0 auto;padding:24px}
-    header{padding:32px 20px;text-align:center;background:linear-gradient(135deg,#0f172a 0%,#111827 60%)}
-    h1{margin:0 0 6px;font-size:32px}
-    article{background:#111827;padding:24px;border-radius:16px;box-shadow:0 8px 24px rgba(0,0,0,.25)}
-    pre{white-space:pre-wrap;word-wrap:break-word;background:#0b1220;padding:16px;border-radius:12px;overflow:auto}
-    a{color:#3a7dff}
+    :root{--bg:#0f172a;--fg:#e5e7eb;--card:#111827;--link:#3a7dff;--muted:#94a3b8}
+    *{box-sizing:border-box} html,body{margin:0;padding:0;background:var(--bg);color:var(--fg);font:16px/1.6 Inter,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif}
+    header{padding:32px 20px;text-align:center;background:linear-gradient(135deg,#0f172a 0%,#111827 60%)} h1{margin:0 0 6px;font-size:32px}
+    main{max-width:900px;margin:0 auto;padding:24px} article{background:var(--card);padding:24px;border-radius:16px;box-shadow:0 8px 24px rgba(0,0,0,.25)}
+    h2,h3{margin-top:1.2em} a{color:var(--link)} footer{max-width:900px;margin:12px auto 40px;padding:0 20px;color:var(--muted)}
   </style>
 </head>
 <body>
-  <header><h1>Geomotional</h1><p>Rechtliche Informationen</p></header>
-  <main><article><h1>Impressum</h1><pre># Impressum (Anbieterkennzeichnung)
+<header><h1>Geomotional</h1><p>Rechtliche Informationen</p></header>
+<main><article>
+  <h2>Impressum (Anbieterkennzeichnung)</h2>
+  <p><strong>Diensteanbieter (§ 5 TMG & § 18 Abs. 2 MStV):</strong><br>
+  <strong>Sven Ackermann</strong> (Privatperson)<br>
+  An den Ladillen 31, 27798 Hude, Germany</p>
+  <p><strong>Kontakt:</strong> <a href="mailto:support@geomotional.app">support@geomotional.app</a></p>
+  <p><strong>App:</strong> „Geomotional“ (Android)<br>
+  <strong>Inhaltlich verantwortlich (§ 18 Abs. 2 MStV):</strong> Sven Ackermann, Anschrift wie oben.</p>
 
-**Diensteanbieter (nach § 5 TMG &amp; § 18 Abs. 2 MStV):**  
-**Sven Ackermann** (Privatperson)  
-**Anschrift:** An den Ladillen 31, 27798 Hude, Germany  
-**Kontakt:**  
-E-Mail: support@geomotional.app
+  <h3>Haftung für Inhalte</h3>
+  <p>Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8–10 TMG sind wir jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben unberührt. Eine Haftung ist erst ab Kenntnis einer konkreten Rechtsverletzung möglich.</p>
 
-**App:** „Geomotional“ (Android)  
-**Verantwortlich für Inhalte i.S.d. § 18 Abs. 2 MStV:** Sven Ackermann, Anschrift wie oben.
+  <h3>Haftung für Links</h3>
+  <p>Unser Angebot enthält ggf. Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Für diese fremden Inhalte ist stets der jeweilige Anbieter verantwortlich. Bei Bekanntwerden von Rechtsverletzungen entfernen wir solche Links umgehend.</p>
 
----
+  <h3>Urheberrecht</h3>
+  <p>Die durch den Diensteanbieter erstellten Inhalte und Werke unterliegen dem deutschen Urheberrecht. Beiträge Dritter sind als solche gekennzeichnet. Jede Verwertung außerhalb der Grenzen des Urheberrechts bedarf der vorherigen Zustimmung des jeweiligen Rechteinhabers.</p>
 
-## Haftung für Inhalte
-Als Diensteanbieter sind wir gemäß § 7 Abs. 1 TMG für eigene Inhalte nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8–10 TMG sind wir jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden entsprechender Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
-
-## Haftung für Links
-Unser Angebot enthält ggf. Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Für diese fremden Inhalte können wir keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
-
-## Urheberrecht
-Die durch den Diensteanbieter erstellten Inhalte und Werke unterliegen dem deutschen Urheberrecht. Beiträge Dritter sind als solche gekennzeichnet. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechts bedürfen der schriftlichen Zustimmung des jeweiligen Rechteinhabers.
-
-## Verbraucherstreitbeilegung/OS-Plattform
-Wir sind nicht verpflichtet und nicht bereit, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.  
-Die Plattform der EU-Kommission zur Online-Streitbeilegung (OS) findet sich unter: https://ec.europa.eu/consumers/odr/
-</pre></article></main>
+  <h3>Verbraucherstreitbeilegung / OS-Plattform</h3>
+  <p>Wir sind nicht verpflichtet und nicht bereit, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen. OS-Plattform der EU-Kommission: <a href="https://ec.europa.eu/consumers/odr/">https://ec.europa.eu/consumers/odr/</a></p>
+</article></main>
+<footer><small>© 2025 Sven Ackermann · <a href="index.html">Zur Startseite</a></small></footer>
 </body></html>
